TP-3195: fix megaphone vertical alignment in TAP button

--- a/drupal/sites/all/themes/base/sass/base/icons/_social-menu.scss
+++ b/drupal/sites/all/themes/base/sass/base/icons/_social-menu.scss
@@ -7,8 +7,9 @@
   font-size: 25px;
   margin: 0 auto;
   display: block;
-  height: 30px;
+  height: 31px;
   width: 37px;
+  padding-top: 6px;
   margin-bottom: 5px;
 
   .i-take-action {
